@@ -5,12 +5,13 @@ serd (0.21.1) unstable;
   * Add serd_reader_set_strict() and -l (lax) option to serdi to tolerate
     parsing URIs with escaped characters
   * Fix reading statements ending with a blank then dot with no space
+  * Fix clash resolution when a blank node ID prefix is set
   * Fix serializing fractional decimals that would round up
   * Add support for Turtle named inline nodes extension
   * Report errors for invalid IRI characters and missing terminators
   * Fix warnings when building with ISO C++ compilers
 
- -- David Robillard <d@drobilla.net>  Sat, 04 Apr 2015 16:22:17 -0400
+ -- David Robillard <d@drobilla.net>  Fri, 04 Sep 2015 16:27:23 -0400
 
 serd (0.20.0) stable;
 
